fixed the reponse on the button click because it wasn't working on mobile.

--- a/d05/tic-tac-toe/style.css
+++ b/d05/tic-tac-toe/style.css
@@ -235,6 +235,12 @@ button:focus {
     display: inline-flex;
     padding: 5px;
   }
+
+  button:active {
+    background-color: red;
+    border: 1px solid red;
+  }
+
   #board {
     margin: 75px 173px 55px 0;
   }
